--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
             <li>bricks</li>
             <li>mortar</li>
             <li>sand</li>
+            
         </ul>
+        <p>Second module addition</p>
     </div>
 </body>
 
